Vivanti: Niccolo Machiavelli: An Intellectual Biography

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1303,6 +1303,7 @@
       <li>Viroli, Maurizio:
         <i class="booktitle">Niccolò's Smile: A Biography of Machiavelli</i>. Translated by Antony Shugaar. Farrar, Strauss and Giroux, 2000.
         <br />Originally published as <i class="booktitle" lang="it">Il sorriso di Niccolò: Storia di Machiavelli</i> in 1998.
+        A biography for the general reader, without footnotes or endnotes.
       </li>
       <li>Black, Robert:
         <i class="booktitle">Machiavelli</i>. Routledge, 2014. (380 pages)
@@ -1312,6 +1313,12 @@
         <i class="booktitle">Be Like the Fox: Machiavelli's Lifelong Quest for Freedom</i>. Penguin, March 2017, 2018. (384 pages)
         <a href="https://www.penguin.co.uk/books/188045/be-like-the-fox/9780141974859/"><abbr>ISBN</abbr> 9780141974859</a>.
         <!--Also Norton, July 2018: http://books.wwnorton.com/books/978-0-393-35581-9/ -->
+      </li>
+      <li>Vivanti, Corrado:
+        <i class="booktitle">Niccolò Machiavelli: An Intellectual Biography</i>. Translated by Simon MacMichael. Princeton University Press, 2013. (280 pages)
+        <a href="https://press.princeton.edu/titles/9944.html"><abbr>ISBN</abbr> 9780691151014</a>.
+        <q>Corrado Vivanti (1928-2012) was an emeritus professor of history, having taught at the universities of Rome, Turin, and Perugia. He was the editor of the standard edition of the complete works of Machiavelli.</q>
+        <!--Erudite, but some reviewers on Amazon.com complain about the rambling prose.-->
       </li>
       <!--
         * N. Machiavelli: The Prince. Translated and edited by Robert M. Adams. Norton Critical Editions. 2nd edition. Norton, 1992: http://books.wwnorton.com/books/webad.aspx?id=11341 
