Lucca Landucci's diary

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1356,6 +1356,13 @@
         <br /><a href="https://en.wikipedia.org/wiki/Alessandra_Macinghi_Strozzi">Alessandra Macinghi Strozzi</a>
         (1407? – March 1471) married a member of the prestigious Strozzi family in Florence.
       </li>
+      <li>Landucci, Lucca:
+        <i class="booktitle">A Florentine Diary from 1450 to 1516</i>. Translated from the Italian by Alice de Rosen Jervis. London: J. M. Dent, 1927.
+        Available on <a href="https://archive.org/details/ldpd_10273453_000">Archive.org</a>.
+        <!--@@download; see also https://onlinelibrary.wiley.com/doi/abs/10.1002/jps.3080170231 -->
+        <a href="https://en.wikipedia.org/wiki/Luca_Landucci">Lucca Landucci</a>
+        was an apothecary from Florence; his diary is an important primary source about the history of Florence.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
