--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1340,6 +1340,10 @@
           In short, Machiavelli was at his most Machiavellian precisely when he voiced his "civic humanism."
         </q>
       </li>
+      <li>Najemy, John M.:
+        <i class="booktitle">A History of Florence, 1200 - 1575</i>. Wiley-Blackwell, 2008. (528 pages)
+        <a href="https://www.wiley.com/en-us/A+History+of+Florence%2C+1200+1575-p-9781405178464"><abbr>ISBN</abbr> 978-1-405-17846-4</a>.
+      </li>
       <li>Najemy, John M., editor:
         <i class="booktitle">The Cambridge Companion to Machiavelli</i>. Cambridge Companions to Literature. Cambridge University Press, 2010. (306 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/literature/european-literature/cambridge-companion-machiavelli?format=PB"><abbr>ISBN</abbr> 9780521678469</a>.
