Centre for Ethical Philosphy, Durham University

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -180,6 +180,11 @@
         Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
+      <li>
+        <a href="https://www.dur.ac.uk/cep/ethicalphilosophy/">Ethical Philosophy</a>
+        at the Centre of Ethical Philosophy, Durham University (<abbr>UK</abbr>).
+        <!--Possibly not updated since 2010.-->
+      </li>
     </ul>
   </main>                           
 
