CESPF, KU Leuven

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -181,6 +181,10 @@
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
       <li>
+        <a href="https://hiw.kuleuven.be/cespf">Centre for Ethics, Social and Political Philosophy (<abbr>CESPF</abbr>)</a>,
+        at the KU Leuven in Belgium.
+      </li>
+      <li>
         <a href="https://www.dur.ac.uk/cep/ethicalphilosophy/">Ethical Philosophy</a>
         at the Centre of Ethical Philosophy, Durham University (<abbr>UK</abbr>).
         <!--Possibly not updated since 2010.-->
