--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1827,6 +1827,13 @@
           -->
         </ul>
       </li>
+      <li>Ground, Ian:
+        <a href="https://www.the-tls.co.uk/articles/public/ludwig-wittgenstein-honesty-ground/">The relentless honesty of Ludwig Wittgenstein</a>,
+        <i class="magazine">Times Literary Supplement</i>, 10.10.2017.
+        <br /><a href="https://twitter.com/philosophybites/status/1000637361649324033">Nigel Warburton praised this article</a>
+        as
+        <q>an example of the excellent, readable philosophical articles and reviews now being published regularly in <a href="https://twitter.com/TheTLS">@TheTLS</a></q>.
+      </li>
       <li lang="de">Habermas, Jürgen:
         <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
         <i class="blog">Logbuch Suhrkamp</i>, 09.03.2018.
