--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -527,6 +527,10 @@
         <a href="https://qz.com/1260943/the-ceo-of-ideo-explains-how-your-creative-capacity-is-the-key-to-surviving-automation/">The <abbr>CEO</abbr> of IDEO explains how your “creative capacity” is the key to surviving automation</a>,
         <i class="website">Quartz</i>, 08.05.2018.
       </li>
+      <li>China Uncensored:
+        <a href="https://www.youtube.com/watch?v=b5Y900F6-ug"><abbr>AI</abbr> Facial Recognition Nabs Another Fugitive</a>
+        (YouTube, 10 minutes, 26.05.2018).
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
