Horgan: Was Wittgenstein a Mystic?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1092,6 +1092,7 @@
       and
       <a href="marx_karl.html">Karl Marx</a>.
     </p>
+
     <h3>David Hume (1711 – 1776)</h3>
     <ul>
       <li>Simon Blackburn:
@@ -1827,12 +1828,17 @@
           -->
         </ul>
       </li>
+      <!--@@section h3 Wittgenstein-->
       <li>Ground, Ian:
         <a href="https://www.the-tls.co.uk/articles/public/ludwig-wittgenstein-honesty-ground/">The relentless honesty of Ludwig Wittgenstein</a>,
         <i class="magazine">Times Literary Supplement</i>, 10.10.2017.
         <br /><a href="https://twitter.com/philosophybites/status/1000637361649324033">Nigel Warburton praised this article</a>
         as
         <q>an example of the excellent, readable philosophical articles and reviews now being published regularly in <a href="https://twitter.com/TheTLS">@TheTLS</a></q>.
+      </li>
+      <li>Horgan, John:
+        <a href="https://blogs.scientificamerican.com/cross-check/was-wittgenstein-a-mystic/">Was Wittgenstein a Mystic?</a>,
+        <i class="blog">Cross-Check</i> (<i class="magazine">Scientific American</i> blog), 25.05.2018.
       </li>
       <li lang="de">Habermas, Jürgen:
         <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
