--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1092,6 +1092,38 @@
       and
       <a href="marx_karl.html">Karl Marx</a>.
     </p>
+    <h3>Aristotle</h3>
+    <ul>
+      <li>
+        <a href="https://www.philosophytalk.org/shows/aristotle">Aristotle (podcast)</a>,
+        <i class="website">Philosophy Talk</i>, 25.01.2005.
+      </li>
+      <li>Herman, Arthur:
+        <i class="booktitle">The Cave and the Light: Plato Versus Aristotle, and the Struggle for the Soul of Western Civilization</i>. PenguinRandomHouse, 2014. (704 pages)
+        <a href="https://www.penguinrandomhouse.com/books/78908/the-cave-and-the-light-by-arthur-herman/9780553385663"><abbr>ISBN</abbr> 9780553385663</a>.
+        <!--Reviews:
+        * https://www.kirkusreviews.com/book-reviews/arthur-herman/the-cave-and-the-light/
+        -->
+      </li>
+      <li>Hall, Edith:
+        <a href="https://aeon.co/essays/what-can-aristotle-teach-us-about-the-routes-to-happiness">Why read Aristotle today?</a>,
+        <i class="website">Aeon</i>, 29.05.2018.
+      </li>
+      <li>Hall, Edith:
+        <i class="booktitle">Aristotle’s Way: How Ancient Wisdom Can Change Your Life</i>. Penguin, 2018. (272 pages)
+        <a href="https://www.penguin.co.uk/books/1111600/aristotle-s-way/9781847924070/"><abbr>ISBN</abbr> 9781847924070</a>.
+        <br />See also <a href="http://edithhall.co.uk/">Edith Hall's website</a>.
+        <!--Reviews:
+          * James Marriott: "Review: Aristotle’s Way: How Ancient Wisdom Can Change Your Life by Edith Hall — what would he think of Facebook?" The Times, 21.04.2018 (paywalled)
+        -->
+      </li>
+      <li>
+        <a href="https://www.c-span.org/video/?178939-1/aristotles-children">Aristotle's Children</a>,
+        <i class="website">C-Span</i>, 26.10.2003 (video, 64 minutes):
+        Mr. Rubenstein talked about his book, <i class="booktitle">Aristotle’s Children: How Christians, Muslims, and Jews Rediscovered Ancient Wisdom and Illuminated the Dark Ages</i>,
+        <!--See also: https://philosophynow.org/issues/13/Aristotles_Children -->
+      </li>
+    </ul>
 
     <h3>David Hume (1711 – 1776)</h3>
     <ul>
