New section: Philosophy of Mind

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -324,18 +324,6 @@
         <a href="http://podcasts.ox.ac.uk/open">other content available under 
         Creative Commons</a>.)
       </li>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PLjgO-QqeHQ3t_CoCOtBgU8kcACJicESma">A Romp through the Philosophy of Mind</a>:
-        a five-part course taught in 2012 by 
-        <a href="http://www.philosophy.ox.ac.uk/members/other_faculty/marianne_talbot">Marianne Talbot</a>
-        at the University of Oxford's Department for Continuing Education.
-        Links to slides, and audio and video downloads are available under a
-        <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons licence</a>
-        at the 
-        <a href="http://podcasts.ox.ac.uk/series/general-philosophy">University
-        of Oxford's podcasts website</a>.
-        (There are five videos that are between 60 and 90 minutes long.)
-      </li>
       <!-- Nietzsche on Mind and Nature: http://podcasts.ox.ac.uk/series/nietzsche-mind-and-nature -->
       <!-- Interviews with Philosophers: http://podcasts.ox.ac.uk/series/interviews-philosophers (2008) -->
       <!-- K.U. Leuven - Institute of Philosophy: 
@@ -546,7 +534,7 @@
       which led to 
       <a href="https://www.quora.com/How-are-philosophers-reacting-to-Stephen-Hawkings-proclamation-that-philosophy-is-dead?share=1">much</a>
       <a href="https://www.youtube.com/watch?v=ofrP5wQFEUY">debate</a>). 
-      Below are some resources about progress and knowledge in philosophy.<!-- @@Reword? Some are about why philosophy is still needed. -->
+      Below are some resources about progress and knowledge in philosophy.<!--@@Reword? Some are about why philosophy is still needed.-->
     </p>
     <ul>
       <li>Carrier, Richard:
@@ -557,8 +545,12 @@
         which was held in Springfield, Missouri, in 2013. 
         The slideshow, a summary of the slideshow and some links about
         criticism of philosophy are available on 
-        <a href="http://www.richardcarrier.info/philosophy.html">Richard
-        Carrier's website</a>.
+        <a href="http://www.richardcarrier.info/philosophy.html">Richard Carrier's website</a>.
+      </li>
+      <li>Schellenberg, J. L.:
+        <a href="https://aeon.co/essays/why-philosophy-is-taking-its-time-to-answer-the-big-questions">Philosophy’s first steps</a>,
+        <i class="website">Aeon</i>, 10.04.2018.
+        Subtitle: <q>Science asks and answers its big questions, so why is philosophy taking its time? Because it’s only just getting started</q>.
       </li>
       <li lang="de">Schnädelbach, Herbert:
         <i class="booktitle">Was Philosophen wissen und was man von ihnen lernen kann</i>.
@@ -1056,6 +1048,61 @@
       </li>
     </ul>
 
+    <h3>Philosophy of Mind</h3>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLjgO-QqeHQ3t_CoCOtBgU8kcACJicESma">A Romp through the Philosophy of Mind</a>:
+        a five-part course taught in 2012 by 
+        <a href="http://www.philosophy.ox.ac.uk/members/other_faculty/marianne_talbot">Marianne Talbot</a>
+        at the University of Oxford's Department for Continuing Education.
+        Links to slides, and audio and video downloads are available under a
+        <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons licence</a>
+        at the 
+        <a href="http://podcasts.ox.ac.uk/series/general-philosophy">University
+        of Oxford's podcasts website</a>.
+        (There are five videos that are between 60 and 90 minutes long.)
+      </li>
+      <li>Frankish, Keith:
+        <a href="https://fivebooks.com/best-books/philosophy-mind-keith-frankish/">The best books on Philosophy of Mind</a>,
+        <i class="website">Five Books</i>, February 2018.
+        The British philosopher Keith Frankish recommends the following five books:
+        <i class="booktitle">A Materialist Theory of the Mind</i> (1968) by David Malet Armstrong,
+        <a href="https://en.wikipedia.org/wiki/Consciousness_Explained"><i class="booktitle">Consciousness Explained</i></a>
+        (1991) by Daniel Dennett (for a different view, see 
+        <a href="https://en.wikipedia.org/wiki/The_Conscious_Mind"><i class="booktitle">The Conscious Mind</i></a>
+        (1996) by David Chalmers),
+        <i class="booktitle">Varieties of Meaning</i> (2004) by Ruth Millikan (a book that needs to be re-read several times),
+        <a href="https://global.oup.com/academic/product/the-architecture-of-the-mind-9780199207077"><i class="booktitle">The Architecture of the Mind</i></a>
+        (2006) by Peter Carruthers (and possibly also <i class="booktitle">The Centred Mind</i>) and
+        <i class="booktitle">Supersizing the Mind</i> (2008) by Andy Clark.
+      </li>
+      <!--https://fivebooks.com/best-books/paul-russell-on-free-will-and-responsibility/
+      -->
+      <li>
+        <a href="https://de.wikipedia.org/wiki/Bieri-Trilemma" hreflang="de" lang="de">Bieri-Trilemma</a>
+        (Wikipedia): a formulation of the mind body problem by the Swiss philosopher
+        <a href="https://en.wikipedia.org/wiki/Peter_Bieri_(author)">Peter Bieri</a>
+        in his book
+        <i class="booktitle">Analytische Philosophie des Geistes</i>.
+      </li>
+      <li>Windt, Jennifer M.:
+        <i class="booktitle">Dreaming: A Conceptual Framework for Philosophy of Mind and Empirical Research</i>. <abbr>MIT</abbr>, 2015. (824 pages)
+        <a href="https://mitpress.mit.edu/books/dreaming"><abbr>ISBN</abbr> 9780262028677</a>.
+      </li>
+      <li>
+        <a href="http://philosophyofbrains.com/">The Brains Blog</a>:
+        <q>a leading forum for work in the philosophy and science of mind</q>.
+      </li>
+      <li><span lang="de">Natterer, Paul:
+        <a href="https://www.paul-natterer.de/philosophie-des-geistes" hreflang="de">Philosophie des Geistes</a>.</span>
+      </li>
+      <li><span lang="de">Oehler, Regina:
+        <a href="http://funkkolleg-philosophie.de/themen/07-treiben-uns-die-neurowissenschaften-die-freiheit-aus/" hreflang="de">Treiben uns die Neurowissenschaften die Freiheit aus?</a>,
+        <i class="website">Funkkolleg 2014/2015</i></span>, 15.12.2014.
+        <!--@@mp3-->
+      </li>
+    </ul>
+
     <h3>Occam's Razor and the Principle of Parsimony</h3>
     <ul>
       <li>Wikipedia: 
@@ -1467,22 +1514,6 @@
           </li>
         </ul>
       </li>
-      <li>Frankish, Keith:
-        <a href="https://fivebooks.com/best-books/philosophy-mind-keith-frankish/">The best books on Philosophy of Mind</a>,
-        <i class="website">Five Books</i>, March 2018.
-        The British philosopher Keith Frankish recommends the following five books:
-        <i class="booktitle">A Materialist Theory of the Mind</i> (1968) by David Malet Armstrong,
-        <a href="https://en.wikipedia.org/wiki/Consciousness_Explained"><i class="booktitle">Consciousness Explained</i></a>
-        (1991) by Daniel Dennett (for a different view, see 
-        <a href="https://en.wikipedia.org/wiki/The_Conscious_Mind"><i class="booktitle">The Conscious Mind</i></a>
-        (1996) by David Chalmers),
-        <i class="booktitle">Varieties of Meaning</i> (2004) by Ruth Millikan (a book that needs to be re-read several times),
-        <a href="https://global.oup.com/academic/product/the-architecture-of-the-mind-9780199207077"><i class="booktitle">The Architecture of the Mind</i></a>
-        (2006) by Peter Carruthers (and possibly also <i class="booktitle">The Centred Mind</i>) and
-        <i class="booktitle">Supersizing the Mind</i> (2008) by Andy Clark.
-      </li>
-      <!-- https://fivebooks.com/best-books/paul-russell-on-free-will-and-responsibility/
-      -->
       <li>Floridi, Luciano:
         <a href="https://fivebooks.com/best-books/luciano-floridi-philosophy-information/">Luciano Floridi recommends the best books on the Philosophy of Information</a>,
         <i class="website">Five Books</i>, February 2018.
