Werner: Herrschaft der Algorithmen. Wer programmiert wen?

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -531,6 +531,11 @@
         <a href="https://www.youtube.com/watch?v=b5Y900F6-ug"><abbr>AI</abbr> Facial Recognition Nabs Another Fugitive</a>
         (YouTube, 10 minutes, 26.05.2018).
       </li>
+      <li>Werner, Christine:
+        <a href="https://www.swr.de/swr2/programm/sendungen/wissen/herrschaft-der-algorithmen/-/id=660374/did=21528068/nid=660374/1orqyjs/index.html" hreflang="de" lang="de">Herrschaft der Algorithmen. Wer programmiert wen?</a>,
+        <i class="website"><abbr>SWR</abbr> 2</i>, 30.05.2018.
+        <!--@@download!!-->
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
