--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -137,6 +137,10 @@
 
     <h2>Ethics in Scientific Research</h2>
     <ul>
+      <li>
+        <a href="http://www.eurecnet.org/">European Network of Research Ethics Committees - <abbr>EUREC</abbr></a>.
+        <q cite="http://www.eurecnet.org/index.html">The network promotes capacity building and assistance for local RECs to cooperate in the EU European Research Area.</q>
+      </li>
       <li>Singer, Peter: 
         <a href="https://www.project-syndicate.org/commentary/volkswagen-monkey-experiments-backlash-by-peter-singer-2018-02">Volkswagen’s Monkeys</a>,
         <i class="website">Project Syndicate</i>, 05.02.2018.
@@ -180,6 +184,7 @@
         Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
+      <!--Ethics research:-->
       <li>
         <a href="https://hiw.kuleuven.be/cespf">Centre for Ethics, Social and Political Philosophy (<abbr>CESPF</abbr>)</a>,
         at the KU Leuven in Belgium.
