Edmond J. Safra Center for Ethics

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -190,6 +190,10 @@
         at the KU Leuven in Belgium.
       </li>
       <li>
+        <a href="https://ethics.harvard.edu/">Edmond J. Safra Center for Ethics</a>,
+        Harvard University.
+      </li>
+      <li>
         <a href="https://www.dur.ac.uk/cep/ethicalphilosophy/">Ethical Philosophy</a>
         at the Centre of Ethical Philosophy, Durham University (<abbr>UK</abbr>).
         <!--Possibly not updated since 2010.-->
