ECI: Ethics & Compliance Initiative

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -184,6 +184,13 @@
         Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
+      <!--Business ethics:-->
+      <li>
+        <a href="http://www.ethics.org/">Ethics &amp; Compliance Initiative (<abbr>ECI</abbr>)</a> (<abbr>USA</abbr>):
+        <q cite="http://www.ethics.org/about/mission-statement">a best practice community of organizations that are committed to creating and sustaining high quality ethics &amp; compliance programs</q>.
+        See also <a href="http://www.ethics.org/research/recent-research"><abbr>ECI</abbr> Recent Research</a>.
+        <!--Originally "Ethics Resource Center", which described itself as a nonprofit, nonpartisan research organization.-->
+      </li>
       <!--Ethics research:-->
       <li>
         <a href="https://hiw.kuleuven.be/cespf">Centre for Ethics, Social and Political Philosophy (<abbr>CESPF</abbr>)</a>,
