European Business Ethics Research

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -191,6 +191,9 @@
         See also <a href="http://www.ethics.org/research/recent-research"><abbr>ECI</abbr> Recent Research</a>.
         <!--Originally "Ethics Resource Center", which described itself as a nonprofit, nonpartisan research organization.-->
       </li>
+      <li>
+        <a href="http://www.eben-net.org/">European Business Ethics Research (<abbr>EBEN</abbr>)</a>.
+      </li>
       <!--Ethics research:-->
       <li>
         <a href="https://hiw.kuleuven.be/cespf">Centre for Ethics, Social and Political Philosophy (<abbr>CESPF</abbr>)</a>,
