Le Cercle d'Ethique des Affaires

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -192,7 +192,10 @@
         <!--Originally "Ethics Resource Center", which described itself as a nonprofit, nonpartisan research organization.-->
       </li>
       <li>
-        <a href="http://www.eben-net.org/">European Business Ethics Research (<abbr>EBEN</abbr>)</a>.
+        <a href="http://www.eben-net.org/">European Business Ethics Research<!--@@research or network?--> (<abbr>EBEN</abbr>)</a>.
+      </li>
+      <li>
+        <a href="https://www.cercle-ethique.net/" hreflang="fr" lang="fr">Le Cercle d’Ethique des Affaires</a>.
       </li>
       <!--Ethics research:-->
       <li>
