Paula Boddington: The best books on Ethics for Artificial Intelligence

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -278,6 +278,19 @@
         <a href="https://www.hdm-stuttgart.de/science/view_beitrag?science_beitrag_ID=453" hreflang="de">Digitale Ethik und Künstliche Intelligenz: Statt 'Not-Aus-Schalter' für <abbr>KI</abbr> brauchen wir einen Ein-Schalter für Ethik</a>,
         <i class="website">Hochschule der Medien</i>, 10.04.2018.
       </li>
+      <li>Boddington, Paula:
+        <a href="https://fivebooks.com/best-books/ethics-artificial-intelligence/">The best books on Ethics for Artificial Intelligence</a>,
+        <i class="website">Five Books</i> (no date). Paula Boddington is the author of
+        <a href="https://www.springer.com/de/book/9783319606477"><i class="booktitle">Towards a Code of Ethics for Artificial Intelligence</i></a>
+        (Springer, 2017) and recommends the following books:
+        <ul>
+          <li><i class="booktitle">Heartificial Intelligence: Embracing Our Humanity to Maximize Machines</i> (2016) by John C Havens,</li>
+          <li><i class="booktitle">The Technological Singularity</i> (2015) by Murray Shanahan,</li>
+          <li><i class="booktitle">Weapons of Math Destruction: How Big Data Increases Inequality and Threatens Democracy</i> (2016) by Cathy O’Neil,</li>
+          <li><i class="booktitle">Moral Machines: Teaching Robots Right from Wrong</i> (2008) by Wendell Wallach and Colin Allen,</li>
+          <li><i class="booktitle">2001: A Space Odyssey</i> (1968) by Arthur C Clarke.</li>
+        </ul>
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
