FutureLearn: Why Ethics Matter

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -149,6 +149,11 @@
         <a href="https://www.niehs.nih.gov/research/resources/bioethics/whatis/index.cfm">What is Ethics in Research &amp; Why is it Important?</a>,
         <i class="website">National Institute of Environmental Health Sciences (<abbr>USA</abbr>)</i>, 01.12.2015. 
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/ethics-research">Why Ethics Matter: Ethical Research</a>:
+        open online course by Griffith University and Deakin University hosted on FutureLearn.
+        The course starts on 4 June 2018 and lasts two weeks.
+      </li>
       <li>Ethicsweb:
         <a href="http://www.ethicsweb.eu/node/122">What is ethics in science?</a>
       </li>
