Danaylov: Calum Chace on Surviving AI

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -364,6 +364,10 @@
         presented at 2016 ICML Workshop on Human Interpretability in Machine Learning (<abbr>WHI</abbr> 2016), New York, <abbr>NY</abbr>.
         <!--@@PDF-->
       </li>
+      <li>Danaylov, Nikola (&ldquo;Socrates&rdquo;):
+        <a href="https://www.singularityweblog.com/calum-chace-on-surviving-ai/">Calum Chace on Surviving <abbr>AI</abbr></a>,
+        <i class="website">Singularity Weblog</i>, 12.02.2016.
+      </li>
       <li>Floridi, Luciano:
         <a href="https://aeon.co/essays/true-ai-is-both-logically-possible-and-utterly-implausible">Should we be afraid of <abbr>AI</abbr>?</a>,
         <i class="website">Aeon</i>, 09.05.2016 (updated 05.12.2017).
