Danaylov: Philosopher Peter Singer on AI, Transhumanism and Ethics

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -291,6 +291,10 @@
           <li><i class="booktitle">2001: A Space Odyssey</i> (1968) by Arthur C Clarke.</li>
         </ul>
       </li>
+      <li>Danaylov, Nikola (&ldquo;Socrates&rdquo;):
+        <a href="https://www.singularityweblog.com/peter-singer/">Philosopher Peter Singer on <abbr>AI</abbr>, Transhumanism and Ethics</a>,
+        <i class="website">Singularity Weblog</i>, 01.06.2018.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
