Other translation of The Prince and Discourses on Livy

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1230,6 +1230,10 @@
       <li>
         <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a>: article on Wikipedia.
       </li>
+      <li>Mansfield, Harvey:
+        <a href="https://www.britannica.com/biography/Niccolo-Machiavelli">Niccolò Machiavelli</a>:
+        article in the <i class="booktitle">Encyclopedia Britannica</i>.
+      </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">The Prince</i>. Translated by Peter Bondanella and Edited by Maurizio Viroli.
         Oxford University Press, 2008.
@@ -1237,8 +1241,21 @@
         <br />This is (or was) the first English translation based on Giorgio Inglese's critical edition of the Italian text.
       </li>
       <li>Machiavelli, Niccolò:
+        <i class="booktitle">The Prince</i>. Translated by Russell Price. Edited by Quentin Skinner and Russell Price. Cambridge Texts in the History of Political Thought.
+        Cambridge University Press, 1988. (190 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/machiavelli-prince?format=PB"><abbr>ISBN</abbr> 9780521349932</a>.
+      </li>
+      <li>Other translations of <i class="booktitle">The Prince:
+        <a href="https://en.wikisource.org/wiki/The_Prince_(Marriott)">W. K. Marriott's translation (1908)</a>
+        and
+        <a href="https://en.wikisource.org/wiki/The_Prince_(Hill_Thomson)">Ninian Hill Thomson's translation (1910)</a>
+        are available on Wikisource.
+      </li>
+      <li>Machiavelli, Niccolò:
         <i class="booktitle">Discourses on Livy</i>. Translated by Julia Conaway Bondanella and Peter Bondanella. Oxford World's Classics. Oxford University Press, 2008. (448 pages)
         <a href="https://global.oup.com/academic/product/discourses-on-livy-9780199555550"><abbr>ISBN</abbr> 9780199555550</a>.
+        <br /><a href="https://en.wikisource.org/wiki/Discourses_on_Livy">Henry Neville's translation of the Discourses on Livy</a>,
+        published in 1675, is available on Wikisource.
       </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">The Art of War</i>. Translated, Edited, and with a Commentary by Christopher Lynch. University of Chicago Press, 2003, 2005. (312 pages)
@@ -1246,6 +1263,8 @@
         <br /><q>Praised by the finest military minds in history and said to have influenced no lesser lights than Frederick the Great and Napoleon, 
           the <i class="booktitle">Art of War</i> is essential reading for anyone who wants to understand the history and theory of war in the West—and 
           for readers of <i class="booktitle">The Prince</i> and <i class="booktitle">Discourse on Livy</i> who seek to explore more fully the connection between war and politics in Machiavelli's thought.</q>
+        <br /><a href="https://en.wikisource.org/wiki/The_Art_of_War_(Machiavelli)">Henry Neville's translation of The Art of War</a>,
+        published in 1675, is available on Wikisource.
       </li>
       <li>Machiavelli, Niccolò:
         <i class="booktitle">The Letters of Machiavelli</i>. Edited and translated by Allan Gilbert. University of Chicago Press, 1961, 1988. (252 pages)
@@ -1397,7 +1416,7 @@
         <a href="https://oyc.yale.edu/political-science/plsc-114">Introduction to Political Philosophy (<abbr>PLSC</abbr> 114)</a>,
         provided through Open Yale Courses.
       </li>
-      <li>
+      <li>The Film Archives:
         <a href="https://www.youtube.com/watch?v=163CxqQpqAM">Is Machiavelli's "The Prince" Still Relevant? Modern Philosophy and Leadership - Analysis</a>,
         1999 (YouTube, 58 minutes).
       </li>
