The Comedies of Machiavelli (Hackett Publishing)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1279,6 +1279,11 @@
         <a href="https://press.princeton.edu/titles/4190.html">Princeton University Press</a>.
         (1988, 1990: <abbr>ISBN</abbr> 0-691-00863-9).
       </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">The Comedies of Machiavelli: The Woman from Andros; The Mandrake; Clizia. Bilingual Edition</i>. Edited and Translated by David Sices and James B. Atkinson. Hackett Publishing, 2007. (416 pages)
+        <a href="https://www.hackettpublishing.com/the-comedies-of-machiavelli-bilingual-edition"><abbr>ISBN</abbr> 978-0-87220-901-5</a>.
+      </li>
+      <!--European Drama Network: The Mandrake Root, adapted and directed by Malachi Bogdanov: https://www.europeandrama.com/ - trailer also at https://www.youtube.com/watch?v=bUR9VdN6LYo -->
       <li>Machiavelli, Niccolò; Musa, Mark (translator); Bondanella, Peter (translator):
         <i class="booktitle">The Portable Machiavelli</i>. Penguin Classics. Penguin, 1979. (576 pages)
         <a href="https://www.penguin.co.uk/books/14758/the-portable-machiavelli/9780140150926/"><abbr>ISBN</abbr> 9780140150926</a>.
