Life of Castruccio Castracani (Hesperus Classics)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1284,6 +1284,10 @@
         <a href="https://www.hackettpublishing.com/the-comedies-of-machiavelli-bilingual-edition"><abbr>ISBN</abbr> 978-0-87220-901-5</a>.
       </li>
       <!--European Drama Network: The Mandrake Root, adapted and directed by Malachi Bogdanov: https://www.europeandrama.com/ - trailer also at https://www.youtube.com/watch?v=bUR9VdN6LYo -->
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">Life of Castruccio Castracani</i>. Translated by Andrew Brown. Foreword by Richard Overy. Hesperus Classics. Hesperus Press, 2003. (68 pages)
+        <a href="http://www.hesperuspress.com/life-of-castruccio-castracani-pb.html"><abbr>ISBN</abbr> 9781843910640</a>.
+      </li>
       <li>Machiavelli, Niccolò; Musa, Mark (translator); Bondanella, Peter (translator):
         <i class="booktitle">The Portable Machiavelli</i>. Penguin Classics. Penguin, 1979. (576 pages)
         <a href="https://www.penguin.co.uk/books/14758/the-portable-machiavelli/9780140150926/"><abbr>ISBN</abbr> 9780140150926</a>.
