Van Reeth & Petit: L'Art de gouverner 3/4

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1380,7 +1380,13 @@
         <i class="booktitle">The English Face of Machiavelli: A Changing Reputation 1500 – 1700</i>. Routledge Library Editions: Political Science Volume 32. Routledge, 2010. (316 pages)
         <a href="https://www.routledge.com/The-English-Face-of-Machiavelli-Routledge-Library-Editions-Political/Raab/p/book/9780415851091"><abbr>ISBN</abbr> 9780415851091</a>.
       </li>
-      <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
+      <li><span lang="fr">Van Reeth, Adèle; Petit, Philippe:
+        <a href="https://www.franceculture.fr/emissions/les-nouveaux-chemins-de-la-connaissance/lart-de-gouverner-34-le-prince-de-machiavel" hreflang="fr">L'Art de gouverner 3/4 : le Prince de Machiavel</a>,
+        <i class="website">France Culture</i></span>, 02.05.2012: podcast (59 minutes) in which
+        Adèle Van Reeth talks with Jean-Louis Fournel about <i class="booktitle">The Prince</i>.
+        <!--Someone copied the audio to YouTube: https://www.youtube.com/watch?v=NNS8GuLcl0Q -->
+      </li>
+       <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
       <li>Strozzi, Alessandra Macinghi:
         <i class="booktitle">Selected Letters of Alessandra Strozzi. Bilingual Edition</i>. Translated with an introduction and notes by Heather Gregory. University of California Press, 1997.
         <abbr>ISBN</abbr> 978-0-520-20390-7.
