Lee: The Ugly Renaissance

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1386,6 +1386,10 @@
         Adèle Van Reeth talks with Jean-Louis Fournel about <i class="booktitle">The Prince</i>.
         <!--Someone copied the audio to YouTube: https://www.youtube.com/watch?v=NNS8GuLcl0Q -->
       </li>
+      <li><span lang="fr">Cafes Histoire:
+        <a href="https://www.youtube.com/watch?v=xDkxk0cmB8E">Machiavel - Conférence de Patrick Boucheron (1/2)</a></span>
+        (YouTube, 48 minutes, 02.10.2017). Recorded on 18 September 2017 in the Balbuzard Café.
+      </li>
        <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
       <li>Strozzi, Alessandra Macinghi:
         <i class="booktitle">Selected Letters of Alessandra Strozzi. Bilingual Edition</i>. Translated with an introduction and notes by Heather Gregory. University of California Press, 1997.
@@ -1453,6 +1457,10 @@
         55-minute video by University of California Television (<abbr>UCTV</abbr>).
         Bobbitt is the author of
         <i class="booktitle">The Garments of Court and Palace: Machiavelli and the World That He Made</i>.
+      </li>
+      <li>Lee, Alexander:
+        <i class="booktitle">The Ugly Renaissance: Sex, Disease and Excess in an Age of Beauty</i>. Arrow / Penguin, 2014. (640 pages)
+        <a href="https://www.penguin.co.uk/books/1093873/the-ugly-renaissance/9780099579472/"><abbr>ISBN</abbr> 9780099579472</a>.
       </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
