Strathern: The Medici: Godfathers of the Renaissance (2007)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1462,6 +1462,10 @@
         <i class="booktitle">The Ugly Renaissance: Sex, Disease and Excess in an Age of Beauty</i>. Arrow / Penguin, 2014. (640 pages)
         <a href="https://www.penguin.co.uk/books/1093873/the-ugly-renaissance/9780099579472/"><abbr>ISBN</abbr> 9780099579472</a>.
       </li>
+      <li>Strathern, Paul:
+        <i class="booktitle">The Medici: Godfathers of the Renaissance</i>. Vintage, 2007. (448 pages)
+        <a href="https://www.penguin.co.uk/books/1031826/the-medici/9780099522973/"><abbr>ISBN</abbr> 9780099522973</a>.
+      </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
