--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1466,6 +1466,10 @@
         <i class="booktitle">The Medici: Godfathers of the Renaissance</i>. Vintage, 2007. (448 pages)
         <a href="https://www.penguin.co.uk/books/1031826/the-medici/9780099522973/"><abbr>ISBN</abbr> 9780099522973</a>.
       </li>
+      <li>Strathern, Paul:
+        <i class="booktitle">The Artist, The Philosopher and The Warrior</i>. Vintage, 2010. (480 pages)
+        <a href="https://www.penguin.co.uk/books/1074551/the-artist-the-philosopher-and-the-warrior/9781845951214/"><abbr>ISBN</abbr> 9781845951214</a>.
+      </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
