Starthern: Death in Florence (2012)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1470,6 +1470,10 @@
         <i class="booktitle">The Artist, The Philosopher and The Warrior</i>. Vintage, 2010. (480 pages)
         <a href="https://www.penguin.co.uk/books/1074551/the-artist-the-philosopher-and-the-warrior/9781845951214/"><abbr>ISBN</abbr> 9781845951214</a>.
       </li>
+      <li>Strathern, Paul:
+        <i class="booktitle">Death in Florence: The Medici, Savonarola and the Battle for the Soul of Man</i>. Vintage, 2012. (464 pages)
+        <a href="https://www.penguin.co.uk/books/1092205/death-in-florence/9780099546443/"><abbr>ISBN</abbr> 9780099546443</a>.
+      </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
