Aspects of Violence in Renaissance Europe (2013)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1478,6 +1478,10 @@
         <i class="booktitle">April Blood: Florence and the Plot against the Medici</i>. Oxford University Press, 2004. (320 pages)
         <a href="http://www.oupcanada.com/catalog/9780195176094.html"><abbr>ISBN</abbr> 9780195176094</a>.
       </li>
+      <li>Davies, Jonathan:
+        <i class="booktitle">Aspects of Violence in Renaissance Europe</i>. Routledge, 2013. (276 pages)
+        <a href="https://www.routledge.com/Aspects-of-Violence-in-Renaissance-Europe/Davies/p/book/9781409433415"><abbr>ISBN</abbr> 9781409433415</a>.<!--$$$-->
+      </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
