J-L Gérôme: Truth Coming Out of Her Well ...

--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
         <i class="booktitle">Teaching to Transgress: Education as the Practice of Freedom</i> (1994) by 
         <a href="https://en.wikipedia.org/wiki/Bell_hooks">bell hooks</a>.
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Truth_Coming_Out_of_Her_Well">Truth Coming Out of Her Well</a>
+        (Wikipedia article about the painting by <span lang="fr">Jean-Léon Gérôme</span>.
+      </li>
     </ul>
     <!-- 
       * Robert C. Richardson: Evolutionary Psychology as Maladapted Psychology. Bradford, 2010. (A critical look at evolutionary psychology.)
