Boston University: Panel: Machiavelli's The Prince after 500 Years

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1304,6 +1304,10 @@
         <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
         public lecture at the University of York, 12 February 2013.
       </li>
+      <li>Boston University:
+        <a href="https://www.youtube.com/watch?v=u-eqXDUO2mU">History Department Panel: Machiavelli's "The Prince" After 500 Years</a>
+        (YouTube, 85 minutes, 11.02.2013).
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
