--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1309,6 +1309,12 @@
         (YouTube, 85 minutes, 11.02.2013).
       </li>
       <li>Viroli, Maurizio:
+        <a href="https://www.youtube.com/watch?v=cw5n6XMKjHI">Redeeming The Prince</a>
+        (YouTube, 112 minutes, 24.12.2013): video of a talk organised by the Program on Constitutional Government at Harvard University on 7 November 2013.
+        The talk is based on Viroli's book <i class="booktitle">Redeeming The Prince: The Meaning of Machiavelli's Masterpiece</i>.
+        <!--Book published by Princeton UP, 2013: https://press.princeton.edu/titles/10083.html -->
+      </li>
+      <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
       </li>
