Panel: How does Machiavelli Regard Religion?

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1314,6 +1314,10 @@
         The talk is based on Viroli's book <i class="booktitle">Redeeming The Prince: The Meaning of Machiavelli's Masterpiece</i>.
         <!--Book published by Princeton UP, 2013: https://press.princeton.edu/titles/10083.html -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=tJNfOeJcC_E">How does Machiavelli Regard Religion?</a>
+        (YouTube, 128 minutes, 19.12.2013): video of a panel at the Program on Constitutional Government at Harvard University.
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
